# beetus

./: .aiexclude  .gitignore  GEMINI_PROMPTS.md  README.md  beetus.pyxapp  chatgpt-shell-gemini-transcript-1.txt  chatgpt-shell-gemini-transcript.txt  pyproject.toml
.zed/: settings.json  tasks.json
beetus/: client.py  game.py  generate.py  main.py  mytypes.py  params.py
beetus/games/: base.py  bubbles.py  perlin_noise.py  snake.py  synthesizer.py
scripts/: package-game.sh  relaunch-game.sh
