[project]
name = "beetus"
version = "0.1.2"
description = "2D physio-generated platformer game."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openapi-client>=0.1.0",
    "pfun-cma-model",
    "pygame>=2.6.1",
]

[build-system]
requires = ["hatchling", "wheel", "setuptools"]
build-backend = "hatchling.build"

[tool.uv.sources]
openapi-client = { path = "./pfun_cma_model_client", subdirectory = "./pfun_cma_model_client/openapi_client"}
pfun-cma-model = { git = "https://github.com/pfun-health/pfun-cma-model.git" }
